homelab-v8/apps/dotnet-hello/devops/deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dotnet-hello
  namespace: default
spec:
  selector:
    app: dotnet-hello
  ports:
    - port: 80
      targetPort: 8080
