homelab-v8/apps/dotnet-hello/devops/deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dotnet-hello
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    - host: dotnet.wguilherme.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dotnet-hello
                port:
                  number: 80
